# python_lab_course_winter_2025_2026

./: .gitignore  README.md  config.yaml  full_run.py  main.py  pyproject.toml  train.py  verify_installation.py
src/: playground.ipynb
src/data/: dataset_loader.py
src/data/augmentation/: advanced.py  baseline.py  classic.py  compose_creator.py
src/experiments/: eval.py  train.py
src/models/: cnn.py  mobilenet.py  model_loader.py
src/plotting/: plot_eval.py  plot_training.py
src/toolbox/: config_loader.py  logger.py  seed.py
